--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "pre-commit": "lint",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
